--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,65 @@
 }
 
 html {
+    font-size: 24px;
     font-family: 'Sriracha';
+}
+
+body {
+    max-width: 1024px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    background-color: #C59FFE;
+}
+
+main {
+    padding: 20px;
+    background-color: lightgray;
+    height: 100%;
+    flex-grow: 1;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    margin-bottom: 20px;
+    font-size: 1.7rem;
+}
+
+p {
+    font-size: 1.2rem;
+    text-align: justify;
+}
+
+footer {
+    background-color: #C59FFE;
+    padding: 20px;
+    flex-grow: 0;
+}
+
+.resume {
+    display: flex;
+}
+
+
+.about-me {
+    margin-left: 20px;
+}
+
+.education,
+.english,
+.skills,
+.experience {
+    margin-top: 20px;
 }
